@@ -4,7 +4,7 @@ Authors@R: c(
         person("Aaron", "Lun", role = c("aut", "cre"), email="infinite.monkeys.with.keyboards@gmail.com"),
         person("Davis", "McCarthy", role="aut")
     )
-Version: 1.1.11
+Version: 1.1.12
 Date: 2021-02-06
 License: GPL-3
 Title: Single-Cell RNA-Seq Analysis Utilities
